# plajstik

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  main.yml
3D/: dpad.stl  dpad_holder.stl  drzak_na_joystik.stl  drzak_na_joystik2.stl  first_floor.stl  housing-Crown.stl  housing-gimbal_housing_top.stl  housing-spacer.stl  joistick.fcstd  kostka.glb  last_floor.stl  model-Base.stl  model-Crown.stl  model-Dpad_angle.stl  model-Dpad_button.stl  model-Dpad_holder.stl  model-First_floor.stl  model-Second_floor.stl  model-Stick_nut_mount.stl  model-button.stl  model-gimbal_housing_top.stl  model-spodek.step  model.20240309-000857.FCBak  model.20240309-065601.FCBak  model.20240309-233127.FCBak  model.20240310-030523.FCBak  model.FCStd  second_floor.stl  second_floor_triger.stl  spacer_10.stl  spacer_5.stl  third_floor.stl
app/: .editorconfig  components.json  constants.ts  keybinds.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: button-label.tsx  canvas.tsx  joystick-model.tsx  theme-switcher.tsx  view-switcher.tsx
app/components/ui/: select.tsx
app/data/keymaps/: default.json
app/public/models/: joystick.glb  kostka.glb
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
firmware/: CMakeLists.txt  CONFIG.md  README.md  default.json  memmap_custom.ld
firmware/include/: maps.c  maps.h  stringmap.c  stringmap.h  tusb_callbacks.h  usb_descriptors.c  utils.c  utils.h
firmware/src/: main.c  maps.c  tusb_callbacks.c  usb_descriptors.c  usb_descriptors.h  utils.c
pcb/main_box/: fp-lib-table  main_box.kicad_pcb  main_box.kicad_pro  main_box.kicad_sch  sym-lib-table
pcb/main_box/Audio-jacks Libraries/: Audio-jacks Libraries.kicad_sym  PJ311D_WOPos.STEP  SJ2-3514A-SMT-TR.stp  SJ3-35044A.stp  mini_Joystick-Module.stp
(+9 files in other folders)
